SONAR-10007 Fix z-index of coverage/duplications popup

--- a/server/sonar-web/src/main/js/app/styles/components/page.css
+++ b/server/sonar-web/src/main/js/app/styles/components/page.css
@@ -30,6 +30,7 @@
 
 .page {
   position: relative;
+  z-index: var(--normalZIndex);
   padding: 10px 20px;
 }
 
@@ -257,6 +258,8 @@
 }
 
 .layout-page-main-inner {
+  position: relative;
+  z-index: var(--normalZIndex);
   min-width: 740px;
   max-width: 980px;
 }
@@ -308,6 +311,8 @@
 }
 
 .layout-page-main-header {
+  position: relative;
+  z-index: var(--aboveNormalZIndex);
   margin-bottom: 20px;
 }
 
